Corrected the HTML Code

--- a/Tip Calculator/index.html
+++ b/Tip Calculator/index.html
@@ -19,7 +19,7 @@
         <button id="calculate">Calculate</button>
         <br>
         <label for="total">Total:</label>
-        <span class="total">120</span>
+        <span class="total"></span>
     </div>
     <script src="script.js"></script>
 </body>
